--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -1,1 +1,32 @@
+<h1>Create a Team and Heroes!<h1>
 
+
+<form action="/team" method="post">
+  Team Name: <input type="text" name="team[name]">
+  Team Motto <input type="text" name="team[motto]">
+
+  <h2>Hero 1</h2>
+    <label for="member1_name>Name</label><br>
+    <input id="member1_name" type="text" name="hero[name]"/></br>
+    <label for="member1_power">Power</label><br>
+    <input id="member1_power" type="text" name="hero[power]"/></br>
+    <label for="member1_biography">Biography</label><br>
+    <input id="member1_biography" type="text" name="hero[biography]"/></br><br>
+
+    <h3>Hero 2</h3>
+      <label for="hero_name_2">Name</label><br>
+      <input id="hero_name_2" type="text" name="hero[name]"/></br>
+      <label for="hero_power_2">Power</label><br>
+      <input id="hero_power_2" type="text" name="hero[power]"/></br>
+      <label for="hero_biography_2">Biography</label><br>
+      <input id="hero_biography_2" type="text" name="hero[biography]"/></br><br>
+
+      <h4>Hero 3</h4>
+        <label for="hero_name_3">Name</label><br>
+        <input id="hero_name_3" type="text" name="hero[name]"/></br>
+        <label for="hero_power_3">Power</label><br>
+        <input id="hero_power_3" type="text" name="hero[power]"/></br>
+        <label for="hero_biography_3">Biography</label><br>
+        <input id="hero_biography_3" type="text" name="hero[biography]"/></br>
+        <input type="submit"  value="Submit"/></br><br>
+        </form>
