--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -6,12 +6,12 @@
   Team Motto <input type="text" name="team[motto]">
 
   <h2>Hero 1</h2>
-    <label for="member1_name>Name</label><br>
-    <input id="member1_name" type="text" name="hero[name]"/></br>
-    <label for="member1_power">Power</label><br>
-    <input id="member1_power" type="text" name="hero[power]"/></br>
-    <label for="member1_biography">Biography</label><br>
-    <input id="member1_biography" type="text" name="hero[biography]"/></br><br>
+    <label for="hero_name_1">Name</label><br>
+    <input id="hero_name_1" type="text" name="hero[name]"/></br>
+    <label for="hero_power_1">Power</label><br>
+    <input id="hero_power_1" type="text" name="hero[power]"/></br>
+    <label for="hero_biography_1">Biography</label><br>
+    <input id="hero_biography_1" type="text" name="hero[biography]"/></br><br>
 
     <h3>Hero 2</h3>
       <label for="hero_name_2">Name</label><br>
