--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -6,27 +6,27 @@
   Team Motto <input type="text" name="team[motto]">
 
   <h2>Hero 1</h2>
-    <label for="hero_name_1">Name</label><br>
-    <input id="hero_name_1" type="text" name="hero[name]"/></br>
-    <label for="hero_power_1">Power</label><br>
-    <input id="hero_power_1" type="text" name="hero[power]"/></br>
-    <label for="hero_biography_1">Biography</label><br>
-    <input id="hero_biography_1" type="text" name="hero[biography]"/></br><br>
+    <label for="member1_name">Name</label><br>
+    <input id="member1_name" type="text" name="team[members][][name]"/></br>
+    <label for="member1_power">Power</label><br>
+    <input id="member1_power" type="text" name="team[members][][power]"/></br>
+    <label for="member1_bio">Biography</label><br>
+    <input id="member1_bio" type="text" name="team[members][][biography]"/></br><br>
 
     <h3>Hero 2</h3>
-      <label for="hero_name_2">Name</label><br>
-      <input id="hero_name_2" type="text" name="hero[name]"/></br>
-      <label for="hero_power_2">Power</label><br>
-      <input id="hero_power_2" type="text" name="hero[power]"/></br>
-      <label for="hero_biography_2">Biography</label><br>
-      <input id="hero_biography_2" type="text" name="hero[biography]"/></br><br>
+      <label for="member2_name">Name</label><br>
+      <input id="member2_name" type="text" name="team[members][][name]"/></br>
+      <label for="member2_power">Power</label><br>
+      <input id="member2_power" type= name="team[members][][power]"/></br>
+      <label for="member2_bio">Biography</label><br>
+      <input id="member2_bio" type="text" name="team[members][][biography]"/></br><br>
 
       <h4>Hero 3</h4>
-        <label for="hero_name_3">Name</label><br>
-        <input id="hero_name_3" type="text" name="hero[name]"/></br>
-        <label for="hero_power_3">Power</label><br>
-        <input id="hero_power_3" type="text" name="hero[power]"/></br>
-        <label for="hero_biography_3">Biography</label><br>
-        <input id="hero_biography_3" type="text" name="hero[biography]"/></br>
-        <input type="submit"  value="Submit"/></br><br>
+        <label for="member3_name">Name</label><br>
+        <input id="member3_name" type="text" name="team[members][][name]"/></br>
+        <label for="member3_power">Power</label><br>
+        <input id="member3_power" type="text" name="team[members][][power]"/></br>
+        <label for="member3_bio">Biography</label><br>
+        <input id="member3_bio" type="text" name="team[members][][biography]"/></br><br
+        <input type="submit">
         </form>
