--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -1,3 +1,17 @@
 
 
+<h1>Team</h1>
 
+<div class="team">
+  <h3>Team Name: <%= @team.name %></h3><br>
+  <h4>Team Motto: <%= @team.motto %></h4>
+</div><br>
+
+<h1>Members</h1>
+<% @members.each do |member| %>
+  <div class="member">
+    <p>Name: <%= member.name %></p><br>
+    <p>Power: <%= member.power %></p><br>
+    <p>Biography: <%= member.bio %></p><br>
+  </div><br>
+<% end %>
