--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -10,8 +10,8 @@
 <h1>Members</h1>
 <% @members.each do |member| %>
   <div class="member">
-    <p>Name: <%= member.name %></p><br>
-    <p>Power: <%= member.power %></p><br>
-    <p>Biography: <%= member.bio %></p><br>
+    <p>Hero Name: <%= member.name %></p><br>
+    <p>Hero Power: <%= member.power %></p><br>
+    <p>Hero Biography: <%= member.biography %></p><br>
   </div><br>
 <% end %>
