--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -17,7 +17,7 @@
       <label for="member2_name">Name</label><br>
       <input id="member2_name" type="text" name="team[members][][name]"/></br>
       <label for="member2_power">Power</label><br>
-      <input id="member2_power" type= name="team[members][][power]"/></br>
+      <input id="member2_power" type="text" name="team[members][][power]"/></br>
       <label for="member2_bio">Biography</label><br>
       <input id="member2_bio" type="text" name="team[members][][biography]"/></br><br>
 
@@ -27,6 +27,6 @@
         <label for="member3_power">Power</label><br>
         <input id="member3_power" type="text" name="team[members][][power]"/></br>
         <label for="member3_bio">Biography</label><br>
-        <input id="member3_bio" type="text" name="team[members][][biography]"/></br><br
-        <input type="submit">
+        <input id="member3_bio" type="text" name="team[members][][biography]"/></br><br>
+        <input type="submit" value="submit">
         </form>
